fix: z-index theme

--- a/src/components/WhyWeStarted/whyWeStated.module.scss
+++ b/src/components/WhyWeStarted/whyWeStated.module.scss
@@ -8,7 +8,7 @@
 
 .overlay {
   background-color: white;
-  z-index: 5;
+  z-index: $z5;
   padding: $s80;
   width: 70%;
   position: absolute;
